k8s/prod/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nossagrana-web
  namespace: nossagrana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nossagrana-web
  template:
    metadata:
      labels:
        app: nossagrana-web
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: nossagrana-web
          image: ghcr.io/leoferolive/nossagrana-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
