k8s/prod/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nossagrana-api
  namespace: nossagrana
spec:
  selector:
    app: nossagrana-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
