k8s/prod/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nossagrana-web
  namespace: nossagrana
spec:
  selector:
    app: nossagrana-web
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
